--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -760,6 +760,7 @@
     <Compile Include="Models\SwitchablePanelModel.cs" />
     <Compile Include="Models\TocModel.cs" />
     <Compile Include="Models\TocModelBuilder.cs" />
+    <Compile Include="Models\UserCourseHistoryModel.cs" />
     <Compile Include="Models\UserCourseModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\UsersStatsPageModel.cs" />
@@ -1401,6 +1402,7 @@
     <Content Include="..\schema.xsd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\Account\CourseRightsHistory.cshtml" />
     <Content Include="Views\Account\JoinedToGroup.cshtml" />
     <Content Include="Views\Admin\StyleValidations.cshtml" />
     <Content Include="Views\AntiPlagiarism\Details.cshtml" />
