log4net remove MinimalLock && RollingFileAppender by date

--- a/src/uLearn.Web/Web.Kontur.config
+++ b/src/uLearn.Web/Web.Kontur.config
@@ -7,8 +7,8 @@
 		<root>
 			<level value="#{aspnet.log4net.minimumLevel}" xdt:Transform="SetAttributes" />
 		</root>
-		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file type="log4net.Util.PatternString" value="C:\\ulearn\\logs\\ulearn-%date{yyyy-MM-dd}.log" xdt:Transform="SetAttributes" />
+		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="C:\\ulearn\\logs\\ulearn-.log" xdt:Transform="SetAttributes" />
 		</appender>
 	</log4net>
     <elmah>
