--- a/src/GiftsGranter/App.Kontur.config
+++ b/src/GiftsGranter/App.Kontur.config
@@ -2,8 +2,8 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<log4net>
-		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file type="log4net.Util.PatternString" value="C:\\ulearn\\logs\\gifts-granter\\%date{yyyy-MM-dd}.log" xdt:Transform="SetAttributes" />
+		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="C:\\ulearn\\logs\\gifts-granter\\.log" xdt:Transform="SetAttributes" />
 		</appender>
 	</log4net>
 </configuration>
