--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -119,12 +119,17 @@
       <level value="DEBUG"/>
       <appender-ref ref="FileAppender"/>
     </root>
-    <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="logs\\ulearn.log"/>
+    <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+      <staticLogFileName value="false"/>
+      <file value="logs\\ulearn-.log"/>
+      <preserveLogFileNameExtension value="true" />
       <appendToFile value="true"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="yyyy-MM-dd"/>
       <encoding value="utf-8"/>
       <layout type="log4net.Layout.PatternLayout">
+        <header value="[Start of logging]&#xd;&#xa;"/>
+        <footer value="[End of logging]&#xd;&#xa;&#xd;&#xa;"/>
         <param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}] — %message%newline"/>
       </layout>
     </appender>
