--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -16,6 +16,7 @@
   <package id="EPPlus" version="4.1.0" targetFramework="net47" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
   <package id="Graphite.Elmah" version="1.0.3.0" targetFramework="net47" />
+  <package id="IdentityModel" version="3.10.10" targetFramework="net47" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net47" />
   <package id="jQuery" version="3.1.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
@@ -87,7 +88,10 @@
   <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
@@ -124,7 +128,7 @@
   <package id="RestSharp" version="105.0.1" targetFramework="net47" />
   <package id="Serilog" version="2.7.1" targetFramework="net47" />
   <package id="Serilog.Sinks.Log4Net" version="1.5.16" targetFramework="net47" />
-  <package id="SkbKontur.Passport.Client" version="2.0.8" targetFramework="net47" />
+  <package id="SkbKontur.Passport.Client" version="3.0.1" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
@@ -149,7 +153,7 @@
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.1" targetFramework="net47" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net47" />
