--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -15,8 +15,13 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah"/>
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah"/>
     </sectionGroup>
-	<section name="graphite.elmah" type="Graphite.Configuration.GraphiteElmahConfiguration, Graphite.Elmah"/>
+  <section name="graphite.elmah" type="Graphite.Configuration.GraphiteElmahConfiguration, Graphite.Elmah"/>
   </configSections>
+  <connectionStrings>
+    <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
+    <!-- В appsettings.json есть копия statsd, но для отправки метрики request.time через MetricsPipe настройка нужна именно здесь -->
+    <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
