--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -10,7 +10,7 @@
         "pathFormat": "logs/log-{Date}.log",
         "minimumLevel": "information"
     },
-    "database": "Server=ulearn-test-db;Database=ulearn;User Id=ulearn;Password=H8gfRBK0Se2Yg2jQMZ54;",
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     
     "coursesDirectory": "../Courses/",
     "baseUrl": "http://localhost:3000",
