--- a/src/CourseTool/CourseTool.csproj
+++ b/src/CourseTool/CourseTool.csproj
@@ -413,10 +413,7 @@
     <None Include="static\flexslider-icon.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Content Include="..\uLearn.Web\Scripts\slide-*.js">
-      <Link>renderer\scripts\%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+   
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
@@ -439,9 +436,7 @@
     <Content Include="renderer\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="renderer\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="renderer\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="renderer\scripts\**\*.*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+   
     <Content Include="examples\video.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -454,6 +449,9 @@
     <Content Include="renderer\styles\bundle.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+		<Content Include="renderer\scripts\bundle.js">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
    
     <Content Include="templates\code.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -517,12 +515,10 @@
   </Target>
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Import Project="..\packages\OctoPack.3.6.3\build\OctoPack.targets" Condition="Exists('..\packages\OctoPack.3.6.3\build\OctoPack.targets')" />
-
-  
 	
 	<Target Name="BeforeBuild">
-		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; $A = cat $(SolutionDir)uLearn.Web\LibrariesScripts.txt;$B = cat $(SolutionDir)uLearn.Web\UlearnScripts.txt;$A = $A+$B;for ($i = 0; $i -le ($A.length - 1); $i += 1) {$A[$i]='$(SolutionDir)ulearn.Web\'+$A[$i]};cat $A | Out-File -FilePath $(ProjectDir)renderer\scripts\bundle.js; &quot;" />
-		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; $A = cat $(SolutionDir)uLearn.Web\UlearnStyles.txt;for ($i = 0; $i -le ($A.length - 1); $i += 1) {$A[$i]='$(SolutionDir)ulearn.Web\'+$A[$i]};cat $A | Out-File -FilePath $(ProjectDir)renderer\styles\bundle.css; &quot;" />
+		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; $A = cat $(SolutionDir)uLearn.Web\LibrariesScripts.txt;$B = cat $(SolutionDir)uLearn.Web\UlearnScripts.txt;$A = $A+$B;for ($i = 0; $i -le ($A.length - 1); $i += 1) {$A[$i]='$(SolutionDir)ulearn.Web\'+$A[$i]};cat $A | Out-File -Encoding 'UTF8' -FilePath $(ProjectDir)renderer\scripts\bundle.js; &quot;" />
+		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; $A = cat $(SolutionDir)uLearn.Web\UlearnStyles.txt;for ($i = 0; $i -le ($A.length - 1); $i += 1) {$A[$i]='$(SolutionDir)ulearn.Web\'+$A[$i]};cat $A | Out-File -Encoding 'UTF8' -FilePath $(ProjectDir)renderer\styles\bundle.css; &quot;" />
 	</Target>
 	<Target Name="AfterBuild">
 	</Target>
