Fix deploy problems: missing katex.min.js and missing schema.xsd

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1207,6 +1207,7 @@
     <Content Include="Jsdifflib\jsdifflib.css" />
     <Content Include="katex\*.css" />
     <Content Include="katex\katex.js" />
+    <Content Include="katex\katex.min.js" />
     <Content Include="LibrariesScripts.txt" />
     <Content Include="Scripts\activate-clipboard.js" />
     <Content Include="Scripts\analytics-highcharts.js" />
