--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "courseToolBuild": "node scripts/courseToolBuild.js",
     "test": "jest",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
