feat(sandboxes): add full-icu to js-sandbox
Adds ability to use all Intl locales
Useful for formatting dates, numbers, etc.
More info: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl

--- a/sandboxes/js-sandbox/container/Dockerfile
+++ b/sandboxes/js-sandbox/container/Dockerfile
@@ -2,6 +2,10 @@ FROM node:current-alpine
 
 RUN apk update && apk upgrade
 
+RUN npm install --unsafe-perm --global full-icu
+
+ENV NODE_ICU_DATA="/usr/local/lib/node_modules/full-icu"
+
 # Add new user for sandbox
 RUN addgroup -S student && adduser -S -g student student \
     && chown -R student:student /home/student
