Fix docker TimeLimit case and container cleaning

--- a/src/RunCheckerJob/deploy/runcheckerjob.service
+++ b/src/RunCheckerJob/deploy/runcheckerjob.service
@@ -9,6 +9,7 @@ Group=ulearn
 WorkingDirectory=/ulearn/
 ExecStart=%ExecStart%
 Restart=always
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
