Node query string is bad, changed to query-string back
node query string parsing unexpectable. For "?param=1" output is { "?param":1}

--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -50,6 +50,7 @@
     "promise": "8.0.2",
     "promise.prototype.finally": "3.1.0",
     "prop-types": "latest",
+    "query-string": "6.8.3",
     "raf": "3.4.0",
     "react": "16.8.3",
     "react-bootstrap": "0.32.4",
