GiftsGranter new csproj

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -67,7 +67,7 @@
          Генерируются при загрузке курса или по требованию. По умолчанию — подпапка ExerciseStudentZips папки ulearn.coursesDirectory -->
 		<add key="ulearn.exerciseStudentZipsDirectory" value="" />
 
-		<!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта. 
+		<!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта.
          Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
 		<add key="ulearn.certificatesDirectory" value="" />
 
@@ -426,6 +426,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="System.Reflection.Primitives" publicKeyToken="B03F5F7F11D50A3A" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.4.3.0" newVersion="1.4.3.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Security.Principal" publicKeyToken="B03F5F7F11D50A3A" culture="neutral" />
