--- a/src/XQueueWatcher/XQueueWatcher.nuspec
+++ b/src/XQueueWatcher/XQueueWatcher.nuspec
@@ -15,7 +15,7 @@
     <tags>ulearn education mooc xqueue</tags>
   </metadata>
   <files>
-    <file src="bin\*\*.config"/>
+    <file src="bin\*\*\*.config"/>
     <file src="..\..\deploy\CreateScheduledTask.ps1" target="deploy\CreateScheduledTask.ps1"/>
     <file src="deploy\*" target="deploy\"/>
   </files>
