--- a/src/RunCsJob/RunCsJob.csproj
+++ b/src/RunCsJob/RunCsJob.csproj
@@ -175,7 +175,7 @@
   <ItemGroup>
     <Compile Remove="test\Program.cs" />
   </ItemGroup>
-  <Target Name="CopyFiles" AfterTargets="Build">
+  <Target Name="CopyFiles" BeforeTargets="AfterBuild;OctoPack">
     <Exec Command="copy &quot;$(ProjectDir)App.Kontur.config&quot; &quot;$(TargetPath).Kontur.config&quot;" />
   </Target>
 </Project>
