--- a/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
+++ b/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="AspNetCore.Http.Extensions" Version="1.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-		<PackageReference Include="Serilog" Version="2.7.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+		<PackageReference Include="Serilog" Version="2.9.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Common.Api\Common.Api.csproj" />
@@ -15,6 +15,9 @@
 			<Project>{3CC038A1-6AA0-49B0-9485-DB9589626BC3}</Project>
 			<Name>Common</Name>
 		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="System.Net.Http" />
 	</ItemGroup>
 	<PropertyGroup>
 		<!-- Temporary workaround for getting Microsoft.AspNetCore.Mvc.Code.dll in the output folder
