--- a/src/AntiPlagiarism.Tests/AntiPlagiarism.Tests.csproj
+++ b/src/AntiPlagiarism.Tests/AntiPlagiarism.Tests.csproj
@@ -4,10 +4,11 @@
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
-		<PackageReference Include="NUnit" Version="3.10.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+		<PackageReference Include="NUnit" Version="3.10.0" />
 		<DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\AntiPlagiarism.Web\AntiPlagiarism.Web.csproj" />
