--- a/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
+++ b/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
@@ -15,4 +15,7 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+	</ItemGroup>
 </Project>
