--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -3,13 +3,14 @@
 		<TargetFramework>netcoreapp2.2</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
 		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
-		<PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
