--- a/src/Common.Api/Common.Api.csproj
+++ b/src/Common.Api/Common.Api.csproj
@@ -2,23 +2,23 @@
 
 	<PropertyGroup>
 		<RootNamespace>Ulearn.Common.Api</RootNamespace>
-		<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AspNetCore.Http.Extensions" Version="1.0.1" />
 		<PackageReference Include="Community.AspNetCore.ExceptionHandling.Mvc" Version="2.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
 		<PackageReference Include="Serilog">
-			<Version>2.7.1</Version>
+			<Version>2.9.0</Version>
 		</PackageReference>
 		<PackageReference Include="Serilog.AspNetCore">
-			<Version>2.1.1</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 		<PackageReference Include="Serilog.Sinks.Console">
 			<Version>3.1.1</Version>
@@ -26,8 +26,8 @@
 		<PackageReference Include="Serilog.Sinks.RollingFile">
 			<Version>3.3.0</Version>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.3.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.5.5" />
 		<PackageReference Include="Vostok.Logging.Serilog">
 			<Version>1.0.0-beta000014</Version>
 		</PackageReference>
@@ -36,6 +36,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="System.Net.Http" />
 	</ItemGroup>
 
 	<!-- See https://docs.microsoft.com/ru-ru/aspnet/core/tutorials/getting-started-with-swashbuckle?view=aspnetcore-2.1&tabs=visual-studio%2Cvisual-studio-xml -->
