--- a/src/Database.Core.Tests/Database.Core.Tests.csproj
+++ b/src/Database.Core.Tests/Database.Core.Tests.csproj
@@ -4,15 +4,16 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
-		<PackageReference Include="Moq" Version="4.10.0" />
-		<PackageReference Include="NUnit" Version="3.10.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+		<PackageReference Include="Moq" Version="4.13.1" />
+		<PackageReference Include="NUnit" Version="3.10.0" />
 		<DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
-		<PackageReference Include="Serilog" Version="2.7.1" />
-		<PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+		<PackageReference Include="Serilog" Version="2.9.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.NUnit" Version="1.0.1" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Database.Core\Database.Core.csproj" />
