--- a/src/Database.Core/Database.Core.csproj
+++ b/src/Database.Core/Database.Core.csproj
@@ -16,11 +16,12 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
-		<PackageReference Include="NinjaNye.SearchExtensions" Version="2.2.0" />
-		<PackageReference Include="Serilog" Version="2.7.1" />
+		<PackageReference Include="NinjaNye.SearchExtensions" Version="3.0.1" />
+		<PackageReference Include="Serilog" Version="2.9.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
 		<PackageReference Include="System.Data.Common" Version="4.3.0" />
-		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.10" />
+		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="2.0.15" />
 	</ItemGroup>
 	<ItemGroup>
 		<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
