--- a/src/RunCheckerJob/RunCheckerJob.csproj
+++ b/src/RunCheckerJob/RunCheckerJob.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NUnit" Version="3.10.1" />
-		<PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
+		<PackageReference Include="NUnit" Version="3.10.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 		<ProjectReference Include="..\Common\Common.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 		<PackageReference Include="log4net" Version="2.0.8" />
