--- a/src/RunCsJob/test/test.csproj
+++ b/src/RunCsJob/test/test.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <CscToolPath>C:\git\Ulearn\src\RunCsJob\bin\Debug\net47\Microsoft.Net.Compilers.2.10.0</CscToolPath>
+    <CscToolPath>C:\git\Ulearn\src\RunCsJob\bin\Debug\net472\Microsoft.Net.Compilers.3.3.1</CscToolPath>
     <AlwaysCompileMarkupFilesInSeparateDomain>True</AlwaysCompileMarkupFilesInSeparateDomain>
     <DisableOutOfProcTaskHost>true</DisableOutOfProcTaskHost>
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
@@ -48,8 +48,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -59,13 +59,13 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="..\WellKnownLibs\nunit.framework.dll" />
-    <None Include="C:\Users\andgein\Documents\Work\ulearn\uLearn\src\RunCsJob\bin\Debug\WellKnownLibs\FluentAssertions.dll" />
+    <None Include="..\WellKnownLibs\FluentAssertions.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
