--- a/src/Stepik.Api/Stepik.Api.csproj
+++ b/src/Stepik.Api/Stepik.Api.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Common\Common.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
-		<PackageReference Include="System.Net.Http" Version="4.3.2" />
-		<PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.4.0" />
+	  <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
+	  <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="4.6.0" />
 	</ItemGroup>
 </Project>
