--- a/src/Ulearn.CSharpAttributes/Ulearn.CSharpAttributes.csproj
+++ b/src/Ulearn.CSharpAttributes/Ulearn.CSharpAttributes.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>Ulearn</RootNamespace>
-		<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
+	  <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 	</ItemGroup>
 </Project>
