--- a/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
+++ b/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
@@ -6,18 +6,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
 		<PackageReference Include="Serilog">
-			<Version>2.7.1</Version>
+			<Version>2.9.0</Version>
 		</PackageReference>
 		<PackageReference Include="Serilog.AspNetCore">
-			<Version>2.1.1</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 		<PackageReference Include="Serilog.Sinks.Console">
 			<Version>3.1.1</Version>
 		</PackageReference>
 		<PackageReference Include="Serilog.Sinks.RollingFile">
 			<Version>3.3.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Collections.Immutable">
+		  <Version>1.6.0</Version>
 		</PackageReference>
 		<PackageReference Include="Vostok.Hosting">
 			<Version>1.0.0-beta000055</Version>
