Fix simple build warnings

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -3,6 +3,7 @@
 		<RootNamespace>Ulearn.Core</RootNamespace>
 		<LangVersion>7</LangVersion>
 		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
+		<NoWarn>NU1701;CS0168</NoWarn>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
