--- a/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
+++ b/src/AntiPlagiarism.UpdateDb/AntiPlagiarism.UpdateDb.csproj
@@ -16,6 +16,7 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
 	  <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
 	</ItemGroup>
 </Project>
