--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -4,8 +4,8 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.All" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
 		<PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
