--- a/src/Database.Core/Database.Core.csproj
+++ b/src/Database.Core/Database.Core.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.2</TargetFramework>
 		<RootNamespace>Database</RootNamespace>
+		<NoWarn>NU1701</NoWarn>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Core\Core.csproj" />
@@ -11,10 +12,10 @@
 		<PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
 		<PackageReference Include="NinjaNye.SearchExtensions" Version="3.0.1" />
 		<PackageReference Include="Serilog" Version="2.9.0" />
