--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -2,15 +2,18 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.2</TargetFramework>
 		<RootNamespace>GiftsGranter</RootNamespace>
+		<NoWarn>NU1701;CS1573</NoWarn>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Community.AspNetCore.ExceptionHandling.Mvc" Version="2.0.3" />
 		<PackageReference Include="EntityFrameworkProfiler.Appender" Version="5.0.5039" />
 		<PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.2" />
-		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.7" />
+		<PackageReference Include="Microsoft.AspNetCore.All" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="2.2.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
